consume boku no hero episodes API

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -13,5 +13,10 @@
         "title": "Idioma",
         "spanish": "Español",
         "english": "Inglés"
-     }
+    },
+    "BUTTONS": {
+        "accept": "Aceptar",
+        "cancel": "Cancelar"
+    }
+     
 }
